# workload-harness

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  EXGENTIC_A2A_RUNNER_PLAN.md  EXGENTIC_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY.md  download_phoenix_trace.py  pyproject.toml
.claude/: settings.json
.claude/skills/orchestrate/: SKILL.md
.claude/skills/orchestrate:ci/: SKILL.md
.claude/skills/orchestrate:plan/: SKILL.md
.claude/skills/orchestrate:precommit/: SKILL.md
.claude/skills/orchestrate:replicate/: SKILL.md
.claude/skills/orchestrate:review/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  pr-verifier.yml  scorecard.yml  security-scans.yml  stale.yml
appworld_a2a_runner/: .gitignore  README.md
appworld_a2a_runner/appworld_a2a_runner/: a2a_client.py  appworld_adapter.py  config.py  otel.py  prompt.py  runner.py
appworld_a2a_runner/tests/: test_a2a_client.py  test_config.py
exgentic_a2a_runner/: .gitignore  IMPLEMENTATION_CHECKLIST.md  QUICKSTART.md  README.md  analyze-run.sh  analyze_traces.py  configure-agent-and-benchmark-environment.sh  configure-agent-environment.sh  configure-agent.sh  configure-benchmark.sh  deploy-agent.sh  deploy-and-evaluate.sh  deploy-benchmark.sh  evaluate-benchmark.sh  evaluate_benchmark.sh  example.env  pyproject.toml  run-with-port-forward.sh
exgentic_a2a_runner/exgentic_a2a_runner/: __init__.py  a2a_client.py  config.py  exgentic_adapter.py  mcp_client.py  otel.py  prometheus_client.py  prompt.py  runner.py
(+6 files in other folders)
